# animated-handwriting-openfx

./: CMakeLists.txt  LICENSE  README.md  install  rebuild
assets/: TimBerglund.com.json
cmake/: Info.plist
openspec/changes/archive/2026-05-26-openfx-build-setup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-26-openfx-build-setup/specs/openfx-build-scaffold/: spec.md
openspec/changes/archive/2026-05-27-add-plugin-parameters/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-28-render-text-basic/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-28-render-text-basic/specs/plugin-parameters/: spec.md
openspec/changes/archive/2026-05-29-render-handwriting-strokes/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-29-render-handwriting-strokes/specs/handwriting-animation/: spec.md
openspec/changes/archive/2026-05-29-render-handwriting-strokes/specs/plugin-parameters/: spec.md
openspec/changes/archive/2026-05-29-render-handwriting-strokes/specs/text-rendering/: spec.md
openspec/changes/archive/2026-05-30-text-position-and-anchor/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-30-text-position-and-anchor/specs/plugin-parameters/: spec.md
openspec/changes/archive/2026-05-30-text-position-and-anchor/specs/text-rendering/: spec.md
openspec/changes/archive/2026-05-31-handwritten-drawing-fx/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-31-handwritten-drawing-fx/specs/diagram-rendering/: spec.md
openspec/changes/archive/2026-05-31-handwritten-drawing-fx/specs/openfx-build-scaffold/: spec.md
openspec/changes/archive/2026-05-31-multiline-text-and-layout/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-31-multiline-text-and-layout/specs/plugin-parameters/: spec.md
openspec/changes/archive/2026-05-31-multiline-text-and-layout/specs/text-rendering/: spec.md
openspec/changes/archive/2026-05-31-tracking-rotation-animate/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-31-tracking-rotation-animate/specs/plugin-parameters/: spec.md
openspec/changes/archive/2026-05-31-tracking-rotation-animate/specs/text-rendering/: spec.md
openspec/specs/diagram-rendering/: spec.md
openspec/specs/handwriting-animation/: spec.md
openspec/specs/openfx-build-scaffold/: spec.md
openspec/specs/plugin-parameters/: spec.md
openspec/specs/text-rendering/: spec.md
src/: bundle.cpp  diagram_loader.cpp  diagram_loader.h  diagram_plugin.cpp  glyph_loader.cpp  glyph_loader.h  glyph_model.h  handwriting_plugin.cpp  plugin.cpp  renderer.cpp  renderer.h
